@@ -16,6 +16,9 @@ not yet  BJH  Release 10.94.00
               are used except ppmtoilbm, so seeded results are the same on
               all platforms.
 
+              pamexec: Issue message instead of being killed by a signal when
+              the exec'ed program does not read the whole image"
+
               pamscale: Fix bogus "bad magic number" or similar failure most
               of the time with -nomix.  Broken since Netpbm 10.49 (December
               2009).
